[package]
name = "goto"
version = "0.2.0"
authors = ["Michal Franc <lam.michal.franc@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
git2 = "0.20"
thiserror = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
openssl = { version = "0.10", features = ["vendored"] }
